added title and default route

--- a/components/Twitter/Twitter.html
+++ b/components/Twitter/Twitter.html
@@ -50,6 +50,7 @@
           searched.push(search);
         }
 
+        document.title = "Twitter Search | " + search;
         text.val(search).select();
       };
     }
