--- a/components/Twitter/Twitter.html
+++ b/components/Twitter/Twitter.html
@@ -19,11 +19,14 @@
       list-style-type: none;
       border-left: 2px solid #aaa;
     }
-    .twitter_component ul li {
-      padding: 0.5em;
-    }
-    .twitter_component ul li:even {
-      background: #eee;
+      .twitter_component ul li {
+        padding: 0.5em;
+      }
+      .twitter_component ul li:even {
+        background: #eee;
+      }
+    .extra {
+      margin-left: 2em;
     }
   </style>
 
@@ -70,8 +73,20 @@
   </div>
 
   <div class="right">
-    <h3>Results</h3>
+    <h3>Results<a class="extra" 
+        href="http://golf.github.com/examples/twitter-client/">source</a></h3>
     <div class="twitter_component"></div>
   </div>
 
+  <!-- Google Analytics -->
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+
+  <script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-8437802-6");
+  pageTracker._trackPageview();
+  } catch(err) {}</script>
 </div>
