removed google analytics

--- a/components/Twitter/Twitter.html
+++ b/components/Twitter/Twitter.html
@@ -25,9 +25,6 @@
       .twitter_component ul li:even {
         background: #eee;
       }
-    .extra {
-      margin-left: 2em;
-    }
   </style>
 
   <script type="text/golf">
@@ -73,20 +70,8 @@
   </div>
 
   <div class="right">
-    <h3>Results<a class="extra" 
-        href="http://golf.github.com/examples/twitter-client/">source</a></h3>
+    <h3>Results</h3>
     <div class="twitter_component"></div>
   </div>
 
-  <!-- Google Analytics -->
-  <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-
-  <script type="text/javascript">
-  try {
-  var pageTracker = _gat._getTracker("UA-8437802-6");
-  pageTracker._trackPageview();
-  } catch(err) {}</script>
 </div>
