added splat_routes plugin

--- a/components/TableExample/TableExample.html
+++ b/components/TableExample/TableExample.html
@@ -67,14 +67,15 @@
     table.properties > tbody > tr:last > td {
       border-bottom: none;
     }
+
+    table.properties > tbody > tr:nth-child(odd) {
+      background: #eee;
+    }
   </style>
 
   <script type="text/golf">
     
     function(data) {
-
-      $.require("jquery.tableize");
-      $.require("jquery.tablesort");
 
       $(".container").append(
         $(data)
