removed uri encoding for $.golf.location: was encoding twice

--- a/components/Twitter/Twitter.html
+++ b/components/Twitter/Twitter.html
@@ -34,7 +34,7 @@
 
       this.search = function(search) {
         $("form").submit(function(){
-          $.golf.location("/search/"+ec(text.val())+"/");
+          $.golf.location("/search/"+text.val()+"/");
           return false;
         });
 
